# simple-rust-server

./: .gitmodules  Cargo.toml  build.sh
src/: main.rs
